<resources>
    <string name="app_name">CarController</string>
    <string name="nav_header_title">Car Controller</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_basic">按钮控制</string>
    <string name="title_speech">语音控制</string>
    <string name="title_gesture">手势控制</string>
    <string name="title_gravity">重力遥感</string>
    <string name="title_absolute">绝对方向</string>
    <string name="title_synchronous">同步控制</string>

    <string name="forward">前</string>
    <string name="left">左</string>
    <string name="right">右</string>
    <string name="north">北</string>
    <string name="south">南</string>
    <string name="east">东</string>
    <string name="west">西</string>
    <string name="stop">停</string>
    <string name="northeast">东北</string>
    <string name="northwest">西北</string>
    <string name="southeast">东南</string>
    <string name="southwest">西南</string>
    <string name="cur_dir_unknown">当前方向：未知</string>
    <string name="cur_dir_north">当前方向：北</string>
    <string name="cur_dir_south">当前方向：南</string>
    <string name="cur_dir_east">当前方向：东</string>
    <string name="cur_dir_west">当前方向：西</string>
    <string name="cur_dir_northeast">当前方向：东北</string>
    <string name="cur_dir_northwest">当前方向：西北</string>
    <string name="cur_dir_southeast">当前方向：东南</string>
    <string name="cur_dir_southwest">当前方向：西南</string>
    <string name="rela_dir_forward">相对指令：前进</string>
    <string name="rela_dir_stop">相对指令：停止</string>
    <string name="rela_dir_left">相对指令：左转</string>
    <string name="rela_dir_right">相对指令：右转</string>
    <string name="rela_dir_unknown">相对指令：未知</string>
    <string name="azimuth">azimuth</string>
    <string name="controller">controller</string>
    <string name="client">client</string>
    <string name="sector">sector</string>
    <string name="forward_eng">FORWARD</string>
    <string name="stop_eng">STOP</string>
    <string name="toggle">TOGGLE</string>

</resources>
