<?xml version="1.0" encoding="utf-8"?>

<!--
    该文件把多个fragment打包成一个逻辑整体：navigation。
    每个fragment有各自的布局与标签。
-->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_speech">

    <fragment
        android:id="@+id/navigation_speech"
        android:name="com.car.SpeechFragment"
        android:label="@string/title_speech"
        tools:layout="@layout/fragment_speech" />

    <fragment
        android:id="@+id/navigation_gesture"
        android:name="com.car.GestureFragment"
        android:label="@string/title_gesture"
        tools:layout="@layout/fragment_gesture" />

    <fragment
        android:id="@+id/navigation_gravity"
        android:name="com.car.GravityFragment"
        android:label="@string/title_gravity"
        tools:layout="@layout/fragment_gravity" />

    <fragment
        android:id="@+id/navigation_absolute"
        android:name="com.car.AbsoluteFragment"
        android:label="@string/title_absolute"
        tools:layout="@layout/fragment_absolute" />

    <fragment
        android:id="@+id/navigation_synchronous"
        android:name="com.car.SynchronousFragment"
        android:label="@string/title_synchronous"
        tools:layout="@layout/fragment_synchronous" />
</navigation>