<?xml version="1.0" encoding="utf-8"?>

<!--该文件定义了底部导航栏的菜单项，包括文字、图标。这个文件并没有描述每项与fragment之间的联系。-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--
    <item
        android:id="@+id/navigation_steer"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_steer" />
    -->

    <item
        android:id="@+id/navigation_audio"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_audio" />

    <item
        android:id="@+id/navigation_gesture"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_gesture" />

    <item
        android:id="@+id/navigation_gravity"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_gravity" />

    <item
        android:id="@+id/navigation_absolute"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_absolute" />

    <item
        android:id="@+id/navigation_synchronous"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_synchronous" />

</menu>
